syntax = "proto3";

package lgbsttracker;

import "light_sensor.proto";

service SensorsService {

  rpc getLightSensorById (common.GetLightSensorById) returns (common.GetLightSensorById.Response);

  rpc getLightSensors (common.GetLightSensors) returns (common.GetLightSensors.Response);

  rpc createLightSensor (common.CreateLightSensor) returns (common.CreateLightSensor.Response);

}